	- sendDirect(): added overloaded methods that accept transmissionDelay as well
	- cancelEvent() now only allows cancelling self-messages

	cModule:
	- removed backgroundDisplayString()/setBackgroundDisplayString() and its compat
	  #defines displayStringAsParent() and setDisplayStringAsParent()
	- added isPlaceholder() to cModule
	- cPlaceHolderModule: renamed to cPlaceHolderModule (lowercase h)

	Message parameters:
	- deprecated; type changed: cMsgPar instead of cPar
	- cMsgPar is the same as the old cPar, but features which are not needed for message parameter objects have been removed:
	  - removed support for interactively prompting the user for a value: input flag, prompt, read() method
	  - removed indirection (redirection) support
	  - removed support for storing expressions

	recordScalar() methods (cSimpleModule, cStatistic):
	- added optional "const char *unit" argument
	- moved to cComponent!
	- see also: **.save-as-scalar = true

	cMessageHeap:
	- renamed getFirst() to removeFirst(), and get(cMessage*) to remove(cMessage*)
	cPar implementation changed

	cPar, etc:
	- setFromText() -> parse()
	- getAsText() -> str()
	- also cDisplayString: getString() -> str() (old getString() deprecated)
	NOTE: inconsistency with INET Framework: IPAddress, IPv6Address, MACAddress: str()

	cEnvir refactoring:
	- motivation: break sim_std.dll dependence on envir.dll (mainly the 
	  "ev" global variable)
	- "ev" is no longer a variable, but a macro which expands to (*evPtr)
	- cEnvir no longer subclasses from std::ostream, but instead redirects 
	  all ev<< calls to an internal std::ostream instance
	- cEnvir is no longer a concrete class, but an abstract base class with
	  lots of pure virtual methods
	- removed puts(const char *) and gets(const char *)

	- cBag class removed

	- global connect() function removed (use cGate::connectTo() instead!)

	- global findXXX(const char *name) functions turned into static cXXX::find(const char *name);
	   - findLink()